omni/tests/goldens/types/undefined_ident_16.err
tests/goldens/types/undefined_ident_16.omni:1:20: error: undefined identifier "missing16"
  let result16:int = missing16
                     ^~~ hint: declare the name before using it
